src/styles/globals.css
@import "tailwindcss";
@config "../../tailwind.config.ts";

@plugin "./hero.ts";

@source "../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}";
@custom-variant dark (&:is(.dark *));

:root {
  --primary: 0, 169, 132; /* in HEX: #00A984 */
  --secondary: 87, 77, 128; /* in HEX: #8f87cd */
  --accent-01: 243, 182, 31; /* in HEX: #F3B61F */
  --accent-02: 32, 78, 74; /* in HEX: #204E4A */
  --focus: 252, 132, 80; /* in HEX: #FC8450 */
  --foreground: 21, 21, 21; /* in HEX: #151515 */
  --background: 245, 248, 248; /* in HEX: #F5F8F8 */
  --warning: 243, 182, 31; /* in HEX: #F3B61F */
  --error: 255, 26, 80; /* in HEX: #FF1A50 */

  transition:
    background-color 0.1s,
    color 0.1s;
}

.dark {
  --foreground: 245, 248, 248;
  --background: 21, 21, 21;
  --secondary: 243, 182, 31;
  --accent-01: 87, 77, 128;
}

::selection {
  background: rgb(var(--accent-01));
  color: rgb(var(--foreground));
}

*:focus-visible {
  outline: 2px solid rgb(var(--focus));

  &input,
  &textarea {
    outline: transparent;
  }
}

.grecaptcha-badge {
  /* biome-ignore lint/complexity/noImportantStyles: fine to use it here */
  visibility: hidden !important;
}

/* Reset */

h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

p,
li,
figcaption {
  max-width: 80ch;
  text-wrap: pretty;
}

main,
section,
footer,
header {
  container-type: inline-size;
}

@utility file-selections {
  button .icon {
    width: 24px;
  }
}

@utility rich-text {
  *:first-child {
    margin-top: 0.5rem;
  }

  h1 {
    @apply text-4xl font-bold text-primary-600 mt-6 mb-3;
  }

  h2 {
    @apply text-3xl font-bold text-secondary mt-6 mb-2;
  }

  h3 {
    @apply text-2xl font-bold mt-6 mb-2;
  }

  h4 {
    @apply text-xl font-bold mt-3 mb-1;
  }

  h5 {
    @apply text-lg font-bold mt-3 mb-1;
  }

  h6 {
    @apply text-base font-bold mt-2 mb-1;
  }

  code {
    @apply bg-black/20 dark:bg-white/20 text-sm p-1 mx-0.5 rounded;
  }

  p {
    @apply my-3 text-justify!;
  }

  a {
    @apply text-primary underline hover:decoration-[3px] focus:no-underline hover:decoration-focus outline-offset-1 focus:rounded-md;
  }

  ol {
    @apply list-decimal ml-5;

    li:has(ol),
    li:has(ul) {
      list-style: none;
    }

    li::marker {
      font-weight: bold;
    }

    ol {
      list-style-type: upper-alpha;
    }
  }

  ul:not(.list-check) {
    @apply list-disc ml-6;

    li:has(ul),
    li:has(ol) {
      list-style: none;
    }

    li::marker {
      color: var(--primary);
    }
  }

  ul.list-check {
    @apply accent-primary;

    li {
      @apply pointer-events-none;
    }

    input {
      @apply h-5 w-5 translate-y-1/4 me-2 my-2;
    }
  }

  blockquote {
    @apply relative ps-8 pe-4 my-3 py-2 bg-foreground/10 rounded-xl italic;

    &::before {
      content: "“";
      @apply absolute top-1 left-3 text-3xl text-primary italic;
    }
  }
}

aside.hatching {
  background: repeating-linear-gradient(
    -33deg,
    rgb(var(--primary)),
    rgb(var(--primary)) 1px,
    transparent 1px,
    transparent 10px
  );
  position: relative;
  border-radius: var(--radius-xl);

  &::before {
    content: "";
    position: absolute;
    inset: 0;
    z-index: 1;
    background-image: linear-gradient(
      60deg,
      rgba(var(--background), 1),
      rgba(var(--background), 0.33)
    );
  }

  &.hatching-reverse::before {
    background-image: linear-gradient(
      -60deg,
      rgba(var(--background), 1),
      rgba(var(--background), 0.33)
    );
  }
}

@utility spin-loader {
  animation-name: spin;
  animation-duration: 1s;
  animation-iteration-count: infinite;
  animation-timing-function: step-end;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  12.5% {
    transform: rotate(45deg);
  }
  25% {
    transform: rotate(90deg);
  }
  37.5% {
    transform: rotate(135deg);
  }
  50% {
    transform: rotate(180deg);
  }
  62.5% {
    transform: rotate(225deg);
  }
  75% {
    transform: rotate(270deg);
  }
  87.5% {
    transform: rotate(315deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

